docs/kafka-stack/kafdrop-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafdrop
  namespace: kafka-stack
  labels:
    app: kafdrop
    argocd.argoproj.io/instance: kafdrop
spec:
  ingressClassName: nginx
  rules:
  - host: kafdrop.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafdrop
            port:
              number: 9000
